@@ -59,8 +59,6 @@ class Statement(Workflow, ModelSQL, ModelView):
         ('cancel', 'Canceled'),
         ('posted', 'Posted'),
         ], 'State', readonly=True, select=True)
-    move_lines = fields.Function(fields.One2Many('account.move.line',
-        None, 'Move Lines'), 'get_move_lines')
 
     @classmethod
     def __setup__(cls):
@@ -188,18 +186,6 @@ class Statement(Workflow, ModelSQL, ModelView):
         if statements:
             return [('id', 'in', [s.id for s in statements])]
         return [('journal',) + tuple(clause[1:])]
-
-    def get_move_lines(self, name):
-        '''
-        Return the move lines that have been generated by the statement.
-        '''
-        move_lines = []
-        for line in self.lines:
-            if not line.move:
-                continue
-            for move_line in line.move.lines:
-                move_lines.append(move_line.id)
-        return move_lines
 
     def get_end_balance(self, name):
         end_balance = self.start_balance
