@@ -1,3 +1,5 @@
+* Replace move_lines by a relate
+
 Version 2.8.0 - 2013-04-22
 * Bug fixes (see mercurial logs for details)
 
